--- a/gb/20/7/16/n12260718.md
+++ b/gb/20/7/16/n12260718.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fckaxq3048/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fckaxq3048/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fckaxq3048/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fckaxq3048/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fckaxq3048/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fckaxq3048/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fckaxq3048/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fckaxq3048/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fckaxq3048/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fckaxq3048/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fckaxq3048/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fckaxq3048/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fckaxq3048/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fckaxq3048/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fckaxq3048/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fckaxq3048/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/fckaxq3048/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fckaxq3048/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/fckaxq3048/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fckaxq3048/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fckaxq3048/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fckaxq3048/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fckaxq3048/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fckaxq3048/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fckaxq3048/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fckaxq3048/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fckaxq3048/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fckaxq3048/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fckaxq3048/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fckaxq3048/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fckaxq3048/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fckaxq3048/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fckaxq3048/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/fckaxq3048/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/fckaxq3048/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fckaxq3048/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fckaxq3048/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fckaxq3048/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fckaxq3048/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fckaxq3048/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fckaxq3048/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fckaxq3048/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fckaxq3048/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/fckaxq3048/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fckaxq3048/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fckaxq3048/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fckaxq3048/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【珍言真语】袁弓夷：南海硝烟起 美或石油禁运</h2>
-<a href="https://git.io/JJGhR"><img width="600" src="https://raw.githubusercontent.com/fckaxq3048/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/fckaxq3048/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<a href="https://dme0bxbvomkno.cloudfront.net/D7sQ8rc8p"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>【珍言真语】香港实业家袁弓夷：中共与伊朗私签石油合同，严重违规；南海火药味重，美下一步或禁运石油；闫丽梦更多猛料，美国逐步发放；武汉P4门口摆潘多拉盒，王毅多次威胁故意放毒？第二波疫情源自北京；雨灾经济损失严重。（大纪元香港新闻中心）
 </h6>
 <hr>
-	<p>【大纪元2020年07月16日讯】（香港大纪元记者黄采文、梁珍采访报导）近日美中关系再度紧绷。美国国务卿蓬佩奥宣布中共在<ahref="https://github.com/fckaxq3048/djy/blob/master/gb/tag/%E5%8D%97%E6%B5%B7.md#1">南海</a>大部分海域的扩张性海事主张“完全不合法”。此外，国际媒体曝光中共与伊朗签订秘密协议，以投资4000亿美元换取伊朗的石油供应。香港实业家<ahref="https://github.com/fckaxq3048/djy/blob/master/gb/tag/%E8%A2%81%E5%BC%93%E5%A4%B7.md#1">袁弓夷</a>接受《<ahref="https://github.com/fckaxq3048/djy/blob/master/gb/tag/%E7%8F%8D%E8%A8%80%E7%9C%9F%E8%AF%AD.md#1">珍言真语</a>》专访时表示，目前火药味浓的<ahref="https://github.com/fckaxq3048/djy/blob/master/gb/tag/%E5%8D%97%E6%B5%B7.md#1">南海</a>问题将是美中对抗的新焦点，他预料美国将以<ahref="https://github.com/fckaxq3048/djy/blob/master/gb/tag/%E7%A6%81%E8%BF%90%E7%9F%B3%E6%B2%B9.md#1">禁运石油</a>的方式制裁中共，“石油禁运打击了中共，也打击了伊朗，又可以制裁（中共）南海的军事设备。”</p>
-<p>人在美国首府华盛顿的香港实业家<ahref="https://github.com/fckaxq3048/djy/blob/master/gb/tag/%E8%A2%81%E5%BC%93%E5%A4%B7.md#1">袁弓夷</a>表示，已获知讯息，由于美国财政部长姆钦（Steven Mnuchin）持反对态度，美国将不会对香港施以金融制裁。</p>
-<p>“因为美国的金融体系，是全世界都享用的一个系统，一旦有什么破坏，会影响到整个美国，也将影响将来全世界金融的稳定性。”暂且排除了金融制裁，袁弓夷认为，目前美国强硬反击中共对南海的主权扩张，而近日中共被爆与伊朗秘密签订石油合约，他预料美国对中共施以<ahref="https://github.com/fckaxq3048/djy/blob/master/gb/tag/%E7%A6%81%E8%BF%90%E7%9F%B3%E6%B2%B9.md#1">禁运石油</a>制裁的可能性很大。</p>
+	<p>【大纪元2020年07月16日讯】（香港大纪元记者黄采文、梁珍采访报导）近日美中关系再度紧绷。美国国务卿蓬佩奥宣布中共在<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%97%E6%B5%B7.md#1">南海</a>大部分海域的扩张性海事主张“完全不合法”。此外，国际媒体曝光中共与伊朗签订秘密协议，以投资4000亿美元换取伊朗的石油供应。香港实业家<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%A2%81%E5%BC%93%E5%A4%B7.md#1">袁弓夷</a>接受《<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%8F%8D%E8%A8%80%E7%9C%9F%E8%AF%AD.md#1">珍言真语</a>》专访时表示，目前火药味浓的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%97%E6%B5%B7.md#1">南海</a>问题将是美中对抗的新焦点，他预料美国将以<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A6%81%E8%BF%90%E7%9F%B3%E6%B2%B9.md#1">禁运石油</a>的方式制裁中共，“石油禁运打击了中共，也打击了伊朗，又可以制裁（中共）南海的军事设备。”</p>
+<p>人在美国首府华盛顿的香港实业家<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%A2%81%E5%BC%93%E5%A4%B7.md#1">袁弓夷</a>表示，已获知讯息，由于美国财政部长姆钦（Steven Mnuchin）持反对态度，美国将不会对香港施以金融制裁。</p>
+<p>“因为美国的金融体系，是全世界都享用的一个系统，一旦有什么破坏，会影响到整个美国，也将影响将来全世界金融的稳定性。”暂且排除了金融制裁，袁弓夷认为，目前美国强硬反击中共对南海的主权扩张，而近日中共被爆与伊朗秘密签订石油合约，他预料美国对中共施以<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A6%81%E8%BF%90%E7%9F%B3%E6%B2%B9.md#1">禁运石油</a>制裁的可能性很大。</p>
 <p>美国国务卿蓬佩奥7月13日发表措辞强硬的声明指，中共对南海区域的主权声索已经过度，许多国际公认的领海以外的主权声索，都是非法的。与此同时《纽约时报》披露，中共与伊朗签署为期25年的合作协议，以在伊朗投资4000亿美元，换取伊朗优惠的石油提供。而这已违反了美国对伊朗石油实施的全球禁运。</p>
 <p>倘若美国采取禁运石油制裁，他说，如此既打击了中共，也打击了伊朗，“美国可以达到很多目的，如果可以清除（中共）在南沙的军事设备，那整个南海就可以变回一个公海，作为航运的公海。”</p>
 <p>他预估，中共的石油储备约一个月左右。“如果禁运石油成功的话，有机会禁止两三个月，它（中共）就要跪下了，那做什么事都可以谈判了。”“当然我是乐观一些，希望同时可以搞定香港的事情。”袁弓夷说。</p>
@@ -19,8 +19,8 @@
 <p>“那时还没有疫情，他已经这么说了，当时个个听到，都楞了，他怎么会冒出这么一句？”疫情发生后，让人有了联想，“一进到（武汉P4实验室）大堂，有个潘多拉盒子雕塑在地上，这事件非常有问题，非常有问题。”</p>
 <p>除了隐而未报的疫情，中国大陆27省遭遇水灾，南京水位已经破了历史高位，人民生命财产遭受威胁，袁弓夷说，对中共而言，“真是雪上加霜，内忧外患”。外国对中国经济封锁，“使得工厂都关闭了，失业情况是一塌糊涂，现在农业产品也种不了，这样被水淹后，工厂、农业、养猪的，全部没了。”</p>
 <p>而雨量最丰沛的7月底将至，接近溃堤边缘的三峡大坝能否承受？一场大灾难似乎正在酝酿。袁弓夷说：“如果再下去真是‘天灭中共’。”而洪水退去后，往往是另一场灾难的开始，“疾病就开始来了，夏天的病菌，下水道那些不干净的，病菌都被水冲上来了。”</p>
-<p><a src=""></a><a href="https://git.io/JJGhR"><img width="600" src="https://raw.githubusercontent.com/fckaxq3048/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/fckaxq3048/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/5GcFfmh88XA" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
-<p>以下是两集《<ahref="https://github.com/fckaxq3048/djy/blob/master/gb/tag/%E7%8F%8D%E8%A8%80%E7%9C%9F%E8%AF%AD.md#1">珍言真语</a>》访谈内容。</p>
+<p><a src=""></a><a href="https://dme0bxbvomkno.cloudfront.net/D7sQ8rc8p"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/5GcFfmh88XA" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p>以下是两集《<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%8F%8D%E8%A8%80%E7%9C%9F%E8%AF%AD.md#1">珍言真语</a>》访谈内容。</p>
 <h2>川普说服不了白宫财长 暂不肯货币制裁</h2>
 <p>记者：美国制裁了四名新疆官员之后，中共外交部宣布对美国四个议员包括美国机构进行了制裁。怎么看双方之间的交锋？</p>
 <p>袁弓夷：实际上是三个议员，一个是国务院的官员，那三个议员：参议员马可·卢比奥（Marco Rubio）和泰德·克鲁兹（Ted Cruz），众议员克里斯·史密斯（Chris Smith）我都认识，都与他们交谈过的。国务院那个相当于副部长一样，就是外交部副部长，宗教自由大使山姆·布朗巴克（Sam Brownback），我来到美国后第一个就是与他交谈。中共所说的对等，当然不是对等了，人家没有做错什么，中共是犯了罪被人惩罚，它拿几个人出来罚就说是对等。</p>
@@ -43,14 +43,14 @@
 <p>袁弓夷：炒股票、炒指数、炒油全部都是这帮人来的，这帮人赚了很多钱，江派当权，由1989年开始，江泽民开始当权，当然那时开始时没有这么大权力，邓小平死了之后，他就大权在手，他周围的人得益了，贪官那帮权贵，就由江家支持，那帮人全部跟江家有关系，江家、曾家、朱家、黄家全部跟着，这边老的还有邓家，全部都是这帮人，最厉害就是上海帮这班人。</p>
 <p>袁弓夷：炒得最厉害，又会炒，他那帮人在外国，在美国，全部在投行、交易所做习惯了，上海那班人，它不是金融中心，但是他会炒，那班是炒家来的，赚很多钱的。</p>
 <p>记者：江家在香港的利益是不是很大？</p>
-<p>袁弓夷：当然是了，整个广东、香港都是江家的，现在习近平才开始派人回来，<ahref="https://github.com/fckaxq3048/djy/blob/master/gb/tag/%E5%9B%BD%E5%AE%89%E6%B3%95.md#1">国安法</a>才开始派人进来，但是他自己又没有人，因为会讲广东话的那些跟习没有关系的，习的那些（人马）不会讲广东话，所以现在又迫着国安找广东人下来。</p>
+<p>袁弓夷：当然是了，整个广东、香港都是江家的，现在习近平才开始派人回来，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9B%BD%E5%AE%89%E6%B3%95.md#1">国安法</a>才开始派人进来，但是他自己又没有人，因为会讲广东话的那些跟习没有关系的，习的那些（人马）不会讲广东话，所以现在又迫着国安找广东人下来。</p>
 <p>实际习近平想经过香港，拿回整个金融的权，因为金融的权，就在上海帮手里。大陆的信用卡，或者现在香港用的信用卡很多用银联的，银联是所有钱币的交换中心，银行与银行，和所有卡，和现在手机支付，那个中心就在上海，就在上海银联，上海控制着，股票市场也在上海，什么证监、保险监什么都在上海。</p>
 <p>所以他（习）现在没有控制到那里，个个以为习近平很大权，他不是很大权，现在那些老人在迫他了，他又迫他们把钱拿回来。总之，一塌糊涂，共产党内部斗争严重到不得了，从来没有好过，但是现在是非常激烈，因为现在是斗钱。军队他（习）拿到了，公安也拿到了，武警算是搞定了，现在就是金融这关，他不惜搞坏经济，都要抢回金融的权。</p>
 <p>记者：如果这次美国对石油禁运的话，对江家的影响是最大？</p>
 <p>袁弓夷：不是，江家赚够钱的了，随时拍拍屁股走人了，它知道习近平长期都要拿回这个权，但我看不见共产党会维持这么久。因为这个斗争都要一、两年的，要两、三年的，你要拿回这个权，但它能不能维持到这么久，真成问题。</p>
 <p>现在看样子，每件事都很大，没有一件事是好的，这段时间更坏，因为跟印度吵架，那个亚洲基本建设银行，金砖银行全部倒闭，印度一退出全部倒闭，所以阿习真是一事无成，样样事最后都是烂尾。</p>
 <p>袁弓夷：我的看法是如果真是禁运石油成功的话，有机会禁止两三个月，它（中共）就要跪下了，那做什么事都可以谈判了，那美国就不客气了，城下之盟。我觉得石油这一招可能性很大，这是很厉害的啊，都是逼你跪下。美国有几招的，这是其中一招逼你跪下，它封锁马六甲，再封波斯湾。</p>
-<p><a src=""></a><a href="https://git.io/JJGhR"><img width="600" src="https://raw.githubusercontent.com/fckaxq3048/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/fckaxq3048/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/q1WsYVWI3xI" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p><a src=""></a><a href="https://dme0bxbvomkno.cloudfront.net/D7sQ8rc8p"><img width="600" src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/q1WsYVWI3xI" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <h2>暴雨再不停 “天灭中共”至</h2>
 <p>记者：中国现在27省水灾，南京水位已经破了历史高位，香港开始爆疫情，万人上去大陆避疫情。怎样看南方水灾到香港又爆疫情，中国是不是安全呢？</p>
 <p>袁弓夷：现在水灾还没有到最高点，7月底下雨是最多的，这件事很厉害。那天我有听大纪元评论员石山说，这么大量的水重量是很厉害的，想想现在从头到尾水浸是我们看到表面，这是重量，这么大量水的重量压到地球的壳上面，这样就产生地震，这是很合理是科学。水很重，以前只是三峡上边储水已经够重了，所以汶川地震到底是不是它造成的呢？现在都没有人敢说，汶川那个时候就是它的上游，现在这水还要重，比那个时候重几倍，下游也重上游也重，这样压在哪里实在肯定有问题的，上游也压着因为有个坝，下游也是那么多水，所以我看真是不是这么简单，如果再下去真是天灭中共。雨这样下这样下真是“天时”。</p>
@@ -82,36 +82,41 @@
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fckaxq3048/djy/blob/master/gb/20/7/7/n12239726.md#1">【珍言真语】袁弓夷：团结灭共 香港才能重生</a></li>
-<li><a href="https://github.com/fckaxq3048/djy/blob/master/gb/20/7/10/n12246884.md#1">【珍言真语】袁弓夷：中共自曝其丑 引美英制裁</a></li>
-<li><a href="https://github.com/fckaxq3048/djy/blob/master/gb/20/7/14/n12253831.md#1">【珍言真语】林晓旭：闫丽梦曝中共瞒疫新证</a></li>
-<li><a href="https://github.com/fckaxq3048/djy/blob/master/gb/20/7/15/n12256418.md#1">【珍言真语】马仲仪：疫情再爆发 港人日子艰难</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/7/n12239726.md#1">【珍言真语】袁弓夷：团结灭共 香港才能重生</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/10/n12246884.md#1">【珍言真语】袁弓夷：中共自曝其丑 引美英制裁</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/14/n12253831.md#1">【珍言真语】林晓旭：闫丽梦曝中共瞒疫新证</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/15/n12256418.md#1">【珍言真语】马仲仪：疫情再爆发 港人日子艰难</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/7/n9812644.md#1" target="_blank">游兆和：从“十月革命”看共产革命本质</a></li><li><a href="https://github.com/fckaxq3048/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/30/n11488493.md#1" target="_blank">苦难中坚守希望 京城姐妹的跌宕人生（2）</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/10/n10773796.md#1" target="_blank">邪恶帝国——里根总统谴责苏联共产政权</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/5/31/n3883877.md#1" target="_blank">公安部高官透露“天安门自焚”内幕</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fckaxq3048/djy/blob/master/gb/20/7/2/n12228522.md#1">红二代：别觉得可栽赃在川普身上 你栽不了</a></li>
-<li><a href="https://github.com/fckaxq3048/djy/blob/master/gb/20/7/14/n12255875.md#1">时尚大V在上海街头阻止性侵 被咬掉耳朵</a></li>
-<li><a href="https://github.com/fckaxq3048/djy/blob/master/gb/20/7/15/n12256936.md#1">九江崩堤村庄全被淹 灾民：什么都没了</a></li>
-<li><a href="https://github.com/fckaxq3048/djy/blob/master/gb/20/7/15/n12257412.md#1">美国将结束香港哪些优惠待遇 一文看懂</a></li>
-<li><a href="https://github.com/fckaxq3048/djy/blob/master/gb/20/7/14/n12254987.md#1">“党领导经济”陷泥潭 中共内部也起争议</a></li>
-<li><a href="https://github.com/fckaxq3048/djy/blob/master/gb/20/7/14/n12255956.md#1">孙俪晒与同父异母妹妹合照 网友赞姐妹神似</a></li>
-<li><a href="https://github.com/fckaxq3048/djy/blob/master/gb/20/7/15/n12256897.md#1">蔡阿嘎拒舔共少赚百万  叹艺人不敢得罪中共</a></li>
-<li><a href="https://github.com/fckaxq3048/djy/blob/master/gb/20/7/13/n12253613.md#1">靠药物控制情绪 金马影后马思纯被传停工治病</a></li>
-<li><a href="https://github.com/fckaxq3048/djy/blob/master/gb/20/7/16/n12259931.md#1">右脸抽动突然胸痛 曾国城疑颜面神经失调就医</a></li>
-<li><a href="https://github.com/fckaxq3048/djy/blob/master/gb/20/7/13/n12253192.md#1">曾志伟抖音直播卖货 货不对版遭网友投诉</a></li>
-<li><a href="https://github.com/fckaxq3048/djy/blob/master/gb/20/7/15/n12257067.md#1">外星人来访？ 法国突然出现神秘麦田圈</a></li>
-<li><a href="https://github.com/fckaxq3048/djy/blob/master/gb/20/7/13/n12251672.md#1">天人感应  末世大地震预兆亡国的历史记载</a></li>
-<li><a href="https://github.com/fckaxq3048/djy/blob/master/gb/20/7/13/n12252971.md#1">一场致命车祸 小莲花让他化险为夷</a></li>
-<li><a href="https://github.com/fckaxq3048/djy/blob/master/gb/20/7/14/n12255240.md#1">打破音障 美国空军传奇人物耶格尔</a></li>
-<li><a href="https://github.com/fckaxq3048/djy/blob/master/gb/20/7/10/n12247141.md#1">古琴为什么可以治病？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678880.md#1">【新闻大家谈】防疫手段失控 中共危机加剧</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678895.md#1">【拍案惊奇】遇难者头七 东航空难变政治事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fckaxq3048/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fckaxq3048/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/16/n12260718.htm">【珍言真语】袁弓夷：南海硝烟起 美或石油禁运</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/7/16/n12260718.htm">【珍言真语】袁弓夷：南海硝烟起 美或石油禁运</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fckaxq3048/djy/blob/master/gb/20/7/16/n12260718.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fckaxq3048/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fckaxq3048/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fckaxq3048/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fckaxq3048/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fckaxq3048/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fckaxq3048/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fckaxq3048/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fckaxq3048/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fckaxq3048/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fckaxq3048/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fckaxq3048/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fckaxq3048/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fckaxq3048/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fckaxq3048/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fckaxq3048/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fckaxq3048/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fckaxq3048/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fckaxq3048/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fckaxq3048/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fckaxq3048/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fckaxq3048/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fckaxq3048/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fckaxq3048/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fckaxq3048/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fckaxq3048/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fckaxq3048/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fckaxq3048/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fckaxq3048/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fckaxq3048/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fckaxq3048/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fckaxq3048/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fckaxq3048/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fckaxq3048/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fckaxq3048/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fckaxq3048/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fckaxq3048/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fckaxq3048/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fckaxq3048/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fckaxq3048/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fckaxq3048/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fckaxq3048/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fckaxq3048/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fckaxq3048/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fckaxq3048/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fckaxq3048/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fckaxq3048/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fckaxq3048/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fckaxq3048/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/7/16/n12260718.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
